force-app/main/default/objects/Shift__c/Shift__c.object-meta.xml
<CustomObject>
    <label>Shift</label>
    <nameField>
        <label>Shifts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>