force-app/main/default/objects/Shift__c/fields/Friday_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Friday_End_Date__c</fullName>
    <label>Friday End Date</label>
    <type>Time</type>
</CustomField>