force-app/main/default/objects/Shift__c/fields/Friday_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Friday_Start_Date__c</fullName>
    <label>Friday Start Date</label>
    <type>Time</type>
</CustomField>