force-app/main/default/objects/Shift__c/fields/Thursday_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Thursday_End_Date__c</fullName>
    <label>Thursday End Date</label>
    <type>Time</type>
</CustomField>